--- a/doc/proposal.tex
+++ b/doc/proposal.tex
@@ -19,7 +19,7 @@ Herramientas para el Soporte de An\'alisis de Rendimiento}
 \bigskip
 \\Universidad Nacional de La Plata - Facultad de Inform\'atica}
 
-\date{Noviembre 2012}
+\date{Diciembre 2012}
 
 \maketitle
 
@@ -142,7 +142,7 @@ Esta secci\'on contiene una lista inicial de los temas a desarrollar.
 \end{enumerate}
 \end{enumerate}
 
-\section{Desarrollo a Realizar}
+\section{Trabajo Experimental a Realizar}
 
 Utilizando las t\'ecnicas estudiadas, se propone implementar y luego analizar
 las siguientes aplicaciones como cierre del trabajo.
@@ -164,7 +164,7 @@ las siguientes aplicaciones como cierre del trabajo.
 
 \end{itemize}
 
-\section{Plan de Trabajo}
+\section{Esquema de Plan de Trabajo}
 
 El siguiente cronograma muestra el plan de actividades tentativo.
 Es de notar que el trabajo ya se encuentra avanzado y un borrador
@@ -174,11 +174,11 @@ inicial ya ha sido revisado informalmente.
   \begin{center}
     \begin{tabular}{|l|l|}\hline
       {\bf Actividad} & {\bf Duraci\'on} \\ \hline
-      Recolecci\'on de Material & Principios de Octubre \\ \hline
-      Tecnolog\'ias & Finales de Octubre \\ \hline
-      Procedimiento General & Principios de Noviembre \\ \hline
-      An\'alisis de Ejemplos & Finales de Noviembre \\ \hline
-      Resultados/Conclusiones & Diciembre \\ \hline
+      Recolecci\'on de Material & Diciembre \\ \hline
+      Tecnolog\'ias & Diciembre \\ \hline
+      Procedimiento General & Enero \\ \hline
+      An\'alisis de Ejemplos & Enero \\ \hline
+      Resultados/Conclusiones & Febrero \\ \hline
     \end{tabular}
     \caption{Detalle de Actividades}
   \end{center}
