Updated after a while...

--- a/doc/proposal.tex
+++ b/doc/proposal.tex
@@ -19,7 +19,7 @@ Herramientas para el Soporte de An\'alisis de Rendimiento}
 \bigskip
 \\Universidad Nacional de La Plata - Facultad de Inform\'atica}
 
-\date{Diciembre 2012}
+\date{Junio de 2013}
 
 \maketitle
 
@@ -174,11 +174,11 @@ inicial ya ha sido revisado informalmente.
   \begin{center}
     \begin{tabular}{|l|l|}\hline
       {\bf Actividad} & {\bf Duraci\'on} \\ \hline
-      Recolecci\'on de Material & Diciembre \\ \hline
-      Tecnolog\'ias & Diciembre \\ \hline
-      Procedimiento General & Enero \\ \hline
-      An\'alisis de Ejemplos & Enero \\ \hline
-      Resultados/Conclusiones & Febrero \\ \hline
+      Recolecci\'on de Material & Junio \\ \hline
+      Tecnolog\'ias & Julio \\ \hline
+      Procedimiento General & Julio \\ \hline
+      An\'alisis de Ejemplos & Agosto \\ \hline
+      Resultados/Conclusiones & Agosto \\ \hline
     \end{tabular}
     \caption{Detalle de Actividades}
   \end{center}
@@ -187,12 +187,12 @@ inicial ya ha sido revisado informalmente.
 
 \section{Posibilidades de Realizaci\'on}
 
+El alumno tiene a su disposici\'on acceso a equipamiento de \'ultima
+generaci\'on como parte de su \'ambito laboral.
+
 El alumno trabaja como l\'ider t\'ecnico de la herramienta Intel Cluster
 Checker en Argentina Software Design Center (Intel C\'ordoba); a su vez
 como docente investigador en el Instituto Universitario Aeron\'autico.
-
-El alumno tiene a su disposici\'on acceso a equipamiento de \'ultima
-generaci\'on como parte de su \'ambito laboral.
 
 \section{Bibliograf\'ia B\'asica Relacionada}
 
