--- a/trunk/doc/request.tex
+++ b/trunk/doc/request.tex
@@ -7,7 +7,7 @@
 
 \name{Lic. Andr\'es More\\DNI 28.103.988}
 
-\date{C\'ordoba, Diciembre del 2012}
+\date{C\'ordoba, Junio del 2013}
 
 
 \begin{document}
@@ -27,6 +27,8 @@ El tema propuesto es ``Herramientas para el Soporte de An\'alisis de
  Rendimiento''. El trabajo ser\'a dirigido por el Dr. Fernando G. Tinetti.
 
 \closing{Saludo a usted muy atentamente.}
+
+\includegraphics[width=4cm]{signature.png}
 
 \end{letter}
 
